compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_cannot_have_an_expression_in_a_pipeline.snap
---
source: compiler-core/src/parse/tests.rs
expression: "[] |> echo fun |> wibble"
---
[
    Expression(
        Pipeline {
            expressions: [
                List {
                    location: SrcSpan {
                        start: 0,
                        end: 2,
                    },
                    elements: [],
                    tail: None,
                },
                Echo {
                    location: SrcSpan {
                        start: 6,
                        end: 10,
                    },
                    keyword_end: 10,
                    expression: None,
                    message: None,
                },
            ],
        },
    ),
    Expression(
        Pipeline {
            expressions: [
                Var {
                    location: SrcSpan {
                        start: 11,
                        end: 14,
                    },
                    name: "fun",
                },
                Var {
                    location: SrcSpan {
                        start: 18,
                        end: 24,
                    },
                    name: "wibble",
                },
            ],
        },
    ),
]
