compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_followed_by_expression_ends_where_expression_ends.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo wibble
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 11,
            },
            expression: Some(
                Var {
                    location: SrcSpan {
                        start: 5,
                        end: 11,
                    },
                    name: "wibble",
                },
            ),
            message: None,
        },
    ),
]
