compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_has_greater_precedence_than_binop.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo 1 + 1
---
[
    Expression(
        BinOp {
            location: SrcSpan {
                start: 0,
                end: 10,
            },
            name: AddInt,
            left: Echo {
                location: SrcSpan {
                    start: 0,
                    end: 6,
                },
                expression: Some(
                    Int {
                        location: SrcSpan {
                            start: 5,
                            end: 6,
                        },
                        value: "1",
                    },
                ),
            },
            right: Int {
                location: SrcSpan {
                    start: 9,
                    end: 10,
                },
                value: "1",
            },
        },
    ),
]
