compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_has_lower_precedence_than_binop.snap
---
source: compiler-core/src/parse/tests.rs
expression: echo 1 + 1
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 10,
            },
            keyword_end: 4,
            expression: Some(
                BinOp {
                    location: SrcSpan {
                        start: 5,
                        end: 10,
                    },
                    operator: AddInt,
                    operator_location: SrcSpan {
                        start: 7,
                        end: 8,
                    },
                    left: Int {
                        location: SrcSpan {
                            start: 5,
                            end: 6,
                        },
                        value: "1",
                        int_value: 1,
                    },
                    right: Int {
                        location: SrcSpan {
                            start: 9,
                            end: 10,
                        },
                        value: "1",
                        int_value: 1,
                    },
                },
            ),
            message: None,
        },
    ),
]
