compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_in_a_pipeline.snap
---
source: compiler-core/src/parse/tests.rs
expression: "[] |> echo |> wibble"
---
[
    Expression(
        Pipeline {
            expressions: [
                List {
                    location: SrcSpan {
                        start: 0,
                        end: 2,
                    },
                    elements: [],
                    tail: None,
                },
                Echo {
                    location: SrcSpan {
                        start: 6,
                        end: 10,
                    },
                    keyword_end: 10,
                    expression: None,
                    message: None,
                },
                Var {
                    location: SrcSpan {
                        start: 14,
                        end: 20,
                    },
                    name: "wibble",
                },
            ],
        },
    ),
]
