compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_in_a_pipeline_with_an_expression_ater_it.snap
---
source: compiler-core/src/parse/tests.rs
expression: "[] |> echo fun |> wibble"
---
[
    Expression(
        PipeLine {
            expressions: [
                List {
                    location: SrcSpan {
                        start: 0,
                        end: 2,
                    },
                    elements: [],
                    tail: None,
                },
                Echo {
                    location: SrcSpan {
                        start: 6,
                        end: 14,
                    },
                    expression: Some(
                        Var {
                            location: SrcSpan {
                                start: 11,
                                end: 14,
                            },
                            name: "fun",
                        },
                    ),
                },
                Var {
                    location: SrcSpan {
                        start: 18,
                        end: 24,
                    },
                    name: "wibble",
                },
            ],
        },
    ),
]
