compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_assert_and_message_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: assert echo True as this_belongs_to_echo
---
[
    Assert(
        Assert {
            location: SrcSpan {
                start: 0,
                end: 40,
            },
            value: Echo {
                location: SrcSpan {
                    start: 7,
                    end: 40,
                },
                expression: Some(
                    Var {
                        location: SrcSpan {
                            start: 12,
                            end: 16,
                        },
                        name: "True",
                    },
                ),
                message: Some(
                    Var {
                        location: SrcSpan {
                            start: 20,
                            end: 40,
                        },
                        name: "this_belongs_to_echo",
                    },
                ),
            },
            message: None,
        },
    ),
]
