compiler-core/src/parse/snapshots/gleam_core__parse__tests__echo_with_block.snap
---
source: compiler-core/src/parse/tests.rs
expression: "echo { 1 + 1 }"
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 14,
            },
            keyword_end: 4,
            expression: Some(
                Block {
                    location: SrcSpan {
                        start: 5,
                        end: 14,
                    },
                    statements: [
                        Expression(
                            BinOp {
                                location: SrcSpan {
                                    start: 7,
                                    end: 12,
                                },
                                operator: AddInt,
                                operator_location: SrcSpan {
                                    start: 9,
                                    end: 10,
                                },
                                left: Int {
                                    location: SrcSpan {
                                        start: 7,
                                        end: 8,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                                right: Int {
                                    location: SrcSpan {
                                        start: 11,
                                        end: 12,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                            },
                        ),
                    ],
                },
            ),
            message: None,
        },
    ),
]
